# athena

./: .gitignore  Athena 397B.desktop.in  CHANGES.MD  CLAUDE.md  README.md  STABILITY-RUNBOOK.md  apply-crash-capture.sh  apply-gsp-stability.sh  athena-autostart.desktop.in  athena-crash-capture.sysctl.conf  athena-demo-script.txt  athena-gpu-monitor.sh  athena-kmsg-logger.cpp  athena-soak-matrix.sh  athena-uvm-hardening.conf  check-kernel-fix.sh  demo-rec-start.sh  demo-rec-stop.sh  install.sh  launch-athena-397b.sh  speak-daemon.sh  zzz-athena-gsp-diag.conf  zzz-nvidia-athena-gsp-stability.conf
models/: emotion2vec-reexport.py
orpheus/: CMakeLists.txt  orpheus-speak.cpp
patches/talk-llama/: CMakeLists.txt  athena_memory.h  silero-endpointer.h  silero-turn-state.h  talk-llama.cpp
